--- a/angular01/package.json
+++ b/angular01/package.json
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/Cho-Young-Il/angular.git",
   "author": "joyikr@gmail.com",
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
